# flowmbed

./: .gitignore  .gitmodules  Cargo.toml  README.md
blocks/: .gitignore  Cargo.toml
blocks/examples/: 01_test_gen_block.rs
blocks/src/: cfg_device.rs  hal.rs  lib.rs
blocks/src/actuators/: digital_output_auto.rs  digital_output_impl.rs  mod.rs  mod.yaml  pwm_multi_channel_block_auto.rs  pwm_multi_channel_block_impl.rs  pwm_output_auto.rs  pwm_output_impl.rs
blocks/src/bus/: array_joiner_auto.rs  array_joiner_impl.rs  array_splitter_auto.rs  array_splitter_impl.rs  mod.rs  mod.yaml.inactive
blocks/src/discrete/: counting_trigger_auto.rs  counting_trigger_blck_auto.rs  counting_trigger_blck_impl.rs  counting_trigger_impl.rs  mod.rs  mod.yaml
blocks/src/hardware_sinks/: digital_output_auto.rs  digital_output_impl.rs  mod.rs  mod.yaml  pwm_output_auto.rs  pwm_output_impl.rs
blocks/src/sensors/: analog_reader_block_auto.rs  analog_reader_block_impl.rs  analog_reader_multi_channel_block_auto.rs  analog_reader_multi_channel_block_impl.rs  digital_reader_block_auto.rs  digital_reader_block_impl.rs  mod.rs  mod.yaml  one_shot_analog_auto.rs  one_shot_analog_impl.rs  one_shot_digital_auto.rs  one_shot_digital_impl.rs
blocks/src/sinks/: array_sink_auto.rs  array_sink_impl.rs  bool_sink_auto.rs  bool_sink_impl.rs  float_sink_auto.rs  float_sink_impl.rs  int_sink_auto.rs  int_sink_impl.rs  mod.rs  mod.yaml
blocks/src/sources/: float_constant_auto.rs  float_constant_impl.rs  mod.rs  mod.yaml  sine_wave_source_auto.rs  sine_wave_source_impl.rs  square_wave_source_auto.rs  square_wave_source_blck_auto.rs  square_wave_source_blck_impl.rs  square_wave_source_impl.rs
blocks/src/transform/: gain_auto.rs  gain_impl.rs  mod.rs  mod.yaml  offset_auto.rs  offset_impl.rs
db-collector/: Cargo.toml  Makefile
db-collector/examples/: 01_writing_influxdb.rs
db-collector/src/: agent.rs  lib.rs
declarative/: Cargo.toml  Makefile
declarative/examples/: .gitignore  01_blink.yaml  01_blink_gen.rs  01_blink_system_template.rs  11_blocks.rs  11_counting_trigger.yaml  11_counting_trigger_decl.rs  11_counting_trigger_impl.rs  51_blink.yaml  generate.rs  generate_block.rs  generate_system.rs
declarative/src/: lib.rs
declarative/src/devices/esp32/: mod.rs
declarative/src/devices/esp32/peripherals/: adc.rs  digital.rs  mod.rs  pwm.rs  serial.rs
declarative/src/dsl/: block.rs  block_def.rs  block_instance.rs  board.rs  circuit.rs  device.rs  event_loop.rs  mod.rs  peripheral.rs  references.rs  rust.rs  system.rs  task.rs
declarative/src/dsl/devices/: esp32.rs  mod.rs
declarative/src/util/: context.rs  mod.rs  path.rs  serde_helpers.rs
dynsys/: Cargo.toml
dynsys/examples/: 01_blink.rs
dynsys/src/: lib.rs
dynsys/src/block_library/: hal.rs
dynsys/src/block_library/discrete/: counting_trigger.rs  mod.rs  simple_delay.rs
dynsys/src/block_library/hardware_sinks/: digital_output.rs  mod.rs  pwm_output.rs
dynsys/src/block_library/sources/: mod.rs  sine_source.rs  square_source.rs
dynsys/src/core/: block.rs  heap_storage.rs  mod.rs  peripheral.rs  system.rs  system_runner.rs  system_storage.rs  variables.rs
dynsys/src/data/: mod.rs  value.rs
dynsys/src/util/: block_macros.rs  containers.rs  debug.rs  mod.rs
esp32/: .gitignore  Cargo.toml  Makefile  README.md  credentials.vars.template  examples  partitions.csv  sdkconfig.defaults
esp32-virtual-hal/: Cargo.toml  Makefile
esp32-virtual-hal/examples/: test1.rs
esp32-virtual-hal/src/: gpio.rs  ledc.rs  lib.rs  peripheral.rs  peripherals.rs
esp32/examples/: 01_blink.rs  01_blink_gen.rs  02_pwm.rs  03_blink_pwm_gen.rs  04_ds18b20.rs  10_gpio.rs  54_temperature_gen.rs
esp32/keys/: Makefile
esp32/src/: lib.rs  main.rs
esp32/src/bioreactor/: bioreactor.rs  mod.rs  peripherals.rs  stirrer.rs  thermal.rs
esp32/src/hal/: adc.rs  digital.rs  mod.rs  pwm.rs  serial_value_sink.rs
esp32/src/peripherals/: ds18b20_array.rs  mod.rs
esp32/src/services/: bus.rs  mod.rs  mqtt.rs  mqtt_handler.rs  wifi.rs
peripherals/: Cargo.toml
peripherals/examples/: 01_set_value_handler.rs
peripherals/src/: device.rs  lib.rs
peripherals/src/actuators/: traits.rs
peripherals/src/channels/: channel_bus.rs  measurement_channel.rs  messages.rs  mod.rs  pub_sub_channel.rs  set_point_channel.rs  set_value_channel.rs  stream_channel.rs
peripherals/src/mqtt/: mod.rs  mqtt_service.rs  paho_mqtt_service.rs  traits.rs
peripherals/src/sensors/: ads1x1x.rs  ds18b20_array.rs  mod.rs  traits.rs
peripherals/src/sinks/: traits.rs
peripherals/src/util/: mod.rs
pymbed/: .gitignore  Makefile  requirements.txt
pymbed/pymbed/: __init__.py  device.py  task.py
pymbed/pymbed/devices/: STM32F405.py  STM32F407.py  STM32G431.py  __init__.py
pymbed/pymbed/peripherals/: __init__.py  gpio.py  uart.py
pymbed/scripts/: 01_blink.py  02_analog_in.py
server_stack/: Makefile  README.md  docker-compose.yaml  secrets_template.env
server_stack/conf/telegraf/: telegraf.conf
shared/: Cargo.toml  Makefile
shared/doc/: 01_blink.yaml
shared/examples/: 01_blink.rs  messages.rs  system_01.rs  system_02.rs
shared/src/: cfg_device.rs  lib.rs
shared/src/dynsys/: block.rs  heap_storage.rs  mod.rs  system.rs  system_storage.rs  variables.rs
shared/src/dynsys/__old/: system_storage.rs  variables.rs
shared/src/dynsys/block_library/: hal.rs  mod.rs  square_source.rs
shared/src/dynsys/block_library/discrete/: mod.rs  simple_delay.rs
shared/src/dynsys/block_library/hardware_sinks/: digital_output.rs  dummny_outputs.rs  mod.rs
shared/src/dynsys/block_library/sources/: mod.rs  square_source.rs
shared/src/messages/: command.rs  dynsys.rs  mod.rs  query.rs
shared/src/util/: config_compile.rs  mod.rs
systems/: Cargo.toml
systems/examples/: 01_blink.yaml  01_blink_gen.rs  02_blink_pwm.yaml  03_blink_pwm.yaml  03_blink_pwm_gen.rs  54_gpio_joystick.yaml  54_gpio_joystick_gen.rs  54_temperature.yaml  54_temperature_gen.rs  55_temperature.yaml
