[package]
name = "flowmbed_core_blocks"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
esp32 = ["esp-idf-sys", "esp-idf-hal", "esp-idf-svc"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}

flowmbed_dynsys = {path = "../dynsys/"}
flowmbed_peripherals = {path = "../peripherals/"}

# HAL
embedded-hal = "=1.0.0-alpha.9"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }

# configuration macro
cfg-if = "1.0"

# logging
log = "0.4"
simple_logger = "4.0"

# device specific dependencies
esp-idf-sys = { version = "0.32", optional = true }
esp-idf-hal = {version = "0.40", optional = true}
esp-idf-svc = { version = "0.45", optional = true, features = ["std", "experimental"]}

[dev-dependencies]
const-default = "1.0"

