[package]
name = "db-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
tokio = { version = "1.26.0", features = ["full"] }
futures = "0.3.27"
futures-util = "0.3.27"
time = {version = "0.3.20", features = ["serde"]}

influxdb = { version = "0.6", features = ["derive"] }
flowmbed_peripherals = {features = ["desktop"], path = "../peripherals/"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
simple_logger = "4.0"
