[package]
name = "flowmbed_declarative"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
typetag = "0.2.5"
strum = { version = "0.24", features = ["derive"] }
genco = "0.17.2"
anyhow = {version = "1", features = ["backtrace"]}
void = "1.0.2"
glob = "0.3.0"
convert_case = "0.6.0"

log = "0.4"
simple_logger = "4.0"
lazy_static="1.4.0"
paste = "1.0"

const-default = "1.0"
const-default-derive = "*"

[dev-dependencies]
embedded-hal = "0.2.7"
flowmbed_dynsys = {path = "../dynsys/"}


[[bin]]
name = "generate_blocks"

[[bin]]
name = "generate_system"