[package]
name = "flowmbed_dynsys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
esp32 = ["esp-idf-sys", "esp-idf-hal", "esp-idf-svc"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
const-default = "1.0"
const-default-derive = "*"
anyhow = {version = "1", features = ["backtrace"]}
cfg-if = "1.0"
log = "0.4"
# HAL
embedded-hal = "=1.0.0-alpha.9"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
# device specific dependencies
esp-idf-sys = { version = "0.31.11", optional = true }
esp-idf-hal = {version = "0.39.3", optional = true}
esp-idf-svc = { version = "0.43.4", optional = true, features = ["std", "experimental"]}

# fallback virtual hal
esp32-virtual-hal = {path = "../esp32-virtual-hal"}
simple_logger = "4.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
lazy_static = "1.4.0"
