[package]
name = "flowmbed_peripherals"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "=1.0.0-alpha.9"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
flowmbed_dynsys = {path = "../dynsys/"}

anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"

# DS18B20
one-wire-bus = "0.1.1"
ds18b20 = "0.1.1"
