[package]
name = "flowmbed_peripherals"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "=1.0.0-alpha.9"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
flowmbed_dynsys = {path = "../dynsys/"}
uuid = {version = "1.3.0", features = ["v4"]}
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = "0.3.27"
time = {version = "0.3.20", features = ["serde", "formatting", "parsing"]}
# chrono = {version = "0.4.20", features = ["serde"]}

# Desktop dependencies
paho-mqtt = {version = "0.12.0", optional = true}
# async-trait = {version = "0.1.67", optional = true}

# Embedded dependencies
nb = "1.0.0"

## DS18B20
one-wire-bus = "0.1.1"
ds18b20 = "0.1.1"

# ADS1x1x
ads1x1x = "0.2.2"

[features]
desktop = ["dep:paho-mqtt"] # "dep:async-trait"