[package]
name = "flowmbed_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
esp32 = ["esp-idf-sys", "esp-idf-hal"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
const-default = "1.0.0"
const-default-derive = "*"
anyhow = {version = "1", features = ["backtrace"]}
embedded-hal = "=1.0.0-alpha.9"
log = "0.4"
# device specific dependencies
esp-idf-sys = { version = "0.31.11", optional = true }
esp-idf-hal = {version = "0.39.3", optional = true}



[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
esp32-virtual-hal = {path = "../esp32-virtual-hal"}
lazy_static = "1.4.0"
simple_logger = "4.0"
