[package]
name = "systems"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "4.0"
flowmbed_dynsys = {path = "../dynsys/"}
flowmbed_core_blocks = {path = "../blocks/"}
const-default = "1.0"
anyhow = {version = "1", features = ["backtrace"]}


[dev-dependencies]